--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>一加手机官网 - 不将就</title>
-  <meta name="keywords" content="一加手机，一加6，一加手机6，OnePlus 6，一加手机5T，1+，1+手机，一加科技，一加手机官网"/>
+  <meta name="keywords" content="一加手机，一加6t，一加手机6t，OnePlus 6，一加手机5T，1+，1+手机，一加科技，一加手机官网"/>
   <meta name="description" content="一加手机是一加科技推出的不将就、高品质一加智能4G手机，装配氢OS系统；1+手机官网提供正品一加手机6、一加手机5/5T、一加手机3/3T、一加云耳、一加金耳等，品质保证，欢迎在线咨询购买。"/>
   <!--[if lte IE 9]>
   <script>if(location.pathname != "/upgrade/browser")location.href="https://www.oneplus.com/cn/upgrade/browser";</script>
