test2-修改home，删除index

--- a/home.html
+++ b/home.html
@@ -1,4 +1,5 @@
 <!doctype html>
-<!--[if IE 9]><html class="ie9 no-js" lang="cn"><![endif]-->
-<!--[if !IE]>-->
-<html lang="cn" class="no-js" from="CMS:China Header & Footer">
+<!doctype html>
+<!doctype html>
+<!doctype html>
+
